--- a/apps/accounts/templates/custom_auth/dashboard.html
+++ b/apps/accounts/templates/custom_auth/dashboard.html
@@ -55,10 +55,10 @@
                         </div>
                         <div class="form-group col-md-4">
                             <label for="industry">Industry</label>
-                                <label for="industry">Industry</label>
-                                <select id="industry" class="form-control custom-scroll" multiple>
-                                    <!-- Options will be dynamically loaded here via JavaScript -->
-                                </select>
+                            <select id="industry" class="form-control custom-scroll">
+                                <option value="">Select Industry</option> <!-- Default option -->
+                                <!-- Options will be dynamically loaded here via JavaScript -->
+                            </select>
                         </div>
                         <div class="form-group col-md-4">
                             <label for="year">Year Founded</label>
