--- a/apps/accounts/templates/custom_auth/dashboard.html
+++ b/apps/accounts/templates/custom_auth/dashboard.html
@@ -277,7 +277,7 @@
                 type: 'DELETE',
                 success: function () {
                     alert('User removed successfully!');
-                    loadUsers(userPageNumber);  // Reload users to reflect the removal
+                    loadUsers(userPageNumber);  
                 },
                 error: function () {
                     alert('Failed to remove user');
